syntax = "proto3";

option java_package = "de.dklotz.homeosspring";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message DefaultResponse {
    bool success = 1;
    optional string message = 2;
}

message File {
    int64 id = 1;
    string name = 2;
    string mime = 3;
    bool favorite = 4;
    bool isVideo = 5;
    repeated MetaInfoMap metaInfos = 6;
}

message MetaInfo {
    optional int64 id = 1;
    string key = 2;
    string value = 3;
}

message MetaInfoToFile {
    int64 fileId = 1;
    int64 metaInfoId = 2;
}

message MetaInfoMap {
    string key = 1;
    repeated MetaInfoValue value = 2;
}

message MetaInfoValue {
    int64 id = 1;
    string value = 2;
}

message FileRequest {
    int64 id = 1;
}

message MetaInfoRequest {
    int64 id = 1;
}

message MetaType {
    string type = 1;
}

service FileRPC {
    rpc Get(FileRequest) returns (File) {};
    rpc All(google.protobuf.Empty) returns (stream File) {};
    rpc Delete(FileRequest) returns (DefaultResponse) {};
    rpc Sync(google.protobuf.Empty) returns (stream File) {};
    rpc AddMetaInfo(MetaInfoToFile) returns (DefaultResponse) {};
    rpc RemoveMetaInfo(MetaInfoToFile) returns (DefaultResponse) {};
}

service MetaInfoRPC {
    rpc Get(MetaInfoRequest) returns (MetaInfo) {};
    rpc All(google.protobuf.Empty) returns (stream MetaInfoMap) {};
    rpc AllOf(MetaType) returns (MetaInfoMap) {};
    rpc AddType(MetaType) returns (DefaultResponse) {};
    rpc RemoveType(MetaType) returns (DefaultResponse) {};
    rpc AllTypes(google.protobuf.Empty) returns (stream MetaType) {};
    rpc Safe(MetaInfo) returns (MetaInfo) {};
    rpc Remove(MetaInfoRequest) returns (DefaultResponse) {};
}